--- a/config/iris.properties
+++ b/config/iris.properties
@@ -1,8 +1,8 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Thu Jun 20 18:02:24 QYZT 2024
+#Sun Jul 07 16:16:21 QYZT 2024
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
-enableShaders=true
+enableShaders=false
 maxShadowRenderDistance=8
 shaderPack=ComplementaryUnbound_r5.1.1.zip
